Pushing for OpenWeatherMapUtils being weird

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.weatherwithsqlite">
+    package="com.example.android.lolstats">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.android.weatherwithsqlite.MainActivity"
+            android:name="com.example.android.lolstats.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,18 +21,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.android.weatherwithsqlite.ForecastItemDetailActivity"
-            android:parentActivityName="com.example.android.weatherwithsqlite.MainActivity">
+            android:name="com.example.android.lolstats.ForecastItemDetailActivity"
+            android:parentActivityName="com.example.android.lolstats.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.weatherwithsqlite.MainActivity" />
+                android:value="com.example.android.lolstats.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.android.weatherwithsqlite.SettingsActivity"
-            android:parentActivityName="com.example.android.weatherwithsqlite.MainActivity">
+            android:name="com.example.android.lolstats.SettingsActivity"
+            android:parentActivityName="com.example.android.lolstats.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.weatherwithsqlite.MainActivity" />
+                android:value="com.example.android.lolstats.MainActivity" />
         </activity>
     </application>
 
