--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.android.weatherwithsqlite"
+        applicationId "com.example.android.lolstats"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
@@ -28,5 +28,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:preference-v14:27.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
     testImplementation 'junit:junit:4.12'
 }
